tests/parser/bad/exps/exp_t-at-with.scilexp
let a = tfun 'A => True in
(* missing function to apply types with *)
tfun 'B => @ 'B
